--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Drum-Kit</title>
   </head>
   <body>
-      <img src="images/crash.png" class="crash" id="drum"  alt="" />
-      <img src="images/snare.png" class="snare" id="drum"  alt="" />
-      <img src="images/kick.png"  class="kick"  id="drum" alt="" />
-      <img src="images/tom1.png"  class="tom1"  id="drum" alt="" />
-      <img src="images/tom2.png"  class="tom2"  id="drum" alt="">
-      <img src="images/tom3.png"  class="tom3"  id="drum" alt="">
-      <img src="images/tom4.png"  class="tom4"  id="drum" alt="">
-      <script src="index.js"></script>
+    <img src="images/crash.png" id="crash" class="drum" alt="" />
+    <img src="images/snare.png" id="snare" class="drum" alt="" />
+    <img src="images/kick.png" id="kick" class="drum" alt="" />
+    <img src="images/tom1.png" id="tom1" class="drum" alt="" />
+    <img src="images/tom2.png" id="tom2" class="drum" alt="" />
+    <img src="images/tom3.png" id="tom3" class="drum" alt="" />
+    <img src="images/tom4.png" id="tom4" class="drum" alt="" />
+    <script src="index.js"></script>
   </body>
 </html>
