--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Drum-Kit</title>
   </head>
   <body>
+    <h1 class="text-sky-400 text-center">Press any of the key to produce sound w, a, j, k, l, s, d</h1>
+    <br><br><br>
     <img src="images/crash.png" id="crash" class="drum" alt="" />
     <img src="images/snare.png" id="snare" class="drum" alt="" />
     <img src="images/kick.png" id="kick" class="drum" alt="" />
